# ComfyUI_PCDMs

./: PCDMS_CXH.py  README.md  Test_inference.py  __init__.py  file_util.py  pyproject.toml  requirements.txt  single_extract_pose.py  stage1_batchtest_prior_model.py  stage1_train_prior_model.py  stage2_batchtest_inpaint_model.py  stage2_train_inpaint_model.py  stage3_batchtest_refined_model.py  stage3_train_refined_model.py  tst  需要手动安装.txt
ckpts/: 模型.txt
src/pipelines/: stage1_prior_pipeline.py  stage2_inpaint_pipeline.py
